fix column overlapping the window in Firefox

--- a/src/app/components/left-side-bar/left-side-bar.component.scss
+++ b/src/app/components/left-side-bar/left-side-bar.component.scss
@@ -68,6 +68,6 @@ $height-button: 40px;
 }
 
 .no-accounts {
-    margin-top: 10px;
+    padding-top: 10px;
     // color: cornflowerblue;   
 }
